--- a/style-tela-de-cadastro.css
+++ b/style-tela-de-cadastro.css
@@ -37,10 +37,10 @@ body {
 .navbar {
 
     width: 1200px;
-    height: 157px;
+    height: 180px;
     background-color: #b8906373;
     position: absolute;
-    top: 13.2%;
+    top: 14.5%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-top-left-radius: 30px;
@@ -98,7 +98,7 @@ body {
 .bloco-idade {
 
     position: absolute;
-    top: 42%;
+    top: 43%;
     left: 582px;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -113,7 +113,7 @@ body {
 .bloco-Data-de-nascimento {
 
     position: absolute;
-    top: 42%;
+    top: 43%;
     left: 47%;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -125,10 +125,20 @@ body {
     height: 30px;
 }
 
+.bloco-genero {
+
+    position: absolute;
+    top: 43%;
+    left: 65%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    
+}
+
 .bloco-CPF {
 
     position: absolute;
-    top: 49%;
+    top: 50%;
     left: 675px;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -143,7 +153,7 @@ body {
 .bloco-Email {
 
     position: absolute;
-    top: 49%;
+    top: 50%;
     left: 60%;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -158,7 +168,7 @@ body {
 .bloco-Endereço {
 
     position: absolute;
-    top: 56%;
+    top: 57%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -173,7 +183,7 @@ body {
 .bloco-Bairro {
 
     position: absolute;
-    top: 63%;
+    top: 64%;
     left: 36.2%;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -188,7 +198,7 @@ body {
 .bloco-CEP {
 
     position: absolute;
-    top: 63%;
+    top: 64%;
     left: 62.2%;
     transform: translate(-50%, -50%);
     font-size: 24px;
@@ -198,6 +208,53 @@ body {
 
     width: 400px;
     height: 30px;
+}
+
+.bloco-Celular {
+
+    position: absolute;
+    top: 71%;
+    left: 37.2%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+}
+
+#Celular {
+
+    width: 350px;
+    height: 30px;
+}
+
+.bloco-Telefone {
+
+    position: absolute;
+    top: 71%;
+    left: 62.2%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+}
+
+#Telefone {
+
+    width: 353px;
+    height: 30px;
+}
+
+#btn{
+
+    width: 150px;
+    height: 30px;
+    background-color: #C8AA86;
+    color: white;
+    position: absolute;
+    top: 87%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    border-radius: 30px;
+    color: black;
+    font-size: 15px;
+    box-shadow:  0.1em 0.1em 0.1em;
+
 }
 
 
