--- a/style-tela-de-login.css
+++ b/style-tela-de-login.css
@@ -23,17 +23,16 @@ body {
 
 .quadrado {
 
-    width: 35%;
-    height: 85%;
+    width: 80ch;
+    height: 120ex;
     background-color: white;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 30px;
-    box-shadow: 0.5ex 0.5ex 0.5ex  ;
-    -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+    box-shadow: 0.5em 0.5em 0.5em  ;
+    
   }
 
   h1 {
@@ -53,8 +52,9 @@ body {
 
   input {
 
-    width: 400px;
-    height: 40px;
+    width: 55ch;
+    height: 5ex;
+    background-color: rgba(128, 128, 128, 0.199);
   }
 
   .bloco-Senha {
@@ -67,10 +67,100 @@ body {
 
   #btn  {
 
-    width: 120px;
-    height: 35px;
+    width: 200px;
+    height: 50px;
+    background-color: #c8aa86bb;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 50px;
+    font-size: 110%;
+    cursor: pointer;
   }
+
+  .Recuperacao-de-senha {
+
+    position: absolute;
+    top: 42%;
+    left: 29%;
+    transform: translate(-50%, -50%);
+    font-size: 1.0rem;
+  }
+
+ .Cadastrar-no-site {
+
+  position: absolute;
+  top: 67%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.1rem;
+ }
+
+ .buttong {
+  max-width: 320px;
+  display: flex;
+  padding: 0.5rem 1.4rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  gap: 0.75rem;
+  color: rgb(65, 63, 63);
+  background-color: #fff;
+  cursor: pointer;
+  transition: all .6s ease;
+  margin-bottom: 2% ;
+  
+}
+
+.buttong svg {
+  height: 24px;
+}
+
+.buttong:hover {
+
+  transform: scale(1.02);
+  
+}
+
+.buttonf {
+  width: 18.5em;
+  display: flex;
+  background-color: #039be5;
+  background-image: linear-gradient(to top right, #0163E0,#18ACFE);
+  color: #ffffff;
+  padding: 0.5rem 1.4rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 0.5rem;
+  gap: 0.75rem;
+  border: none;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  cursor: pointer;
+  transition: .6s ease;
+}
+
+.buttonf svg {
+  height: 30px;
+}
+
+.buttonf:hover {
+  transform: scale(1.02);
+}
+
+.botoes {
+
+  position: absolute;
+  top: 75%;
+  left: 30%;
+}
