--- a/style-cadastro-mal-sucedido.css
+++ b/style-cadastro-mal-sucedido.css
@@ -36,6 +36,8 @@ body {
     position: absolute;
     top: 15%;
     left: 43%;
+    font-family: 'Antic Slab';
+
 }
 
 img {
@@ -53,6 +55,8 @@ p {
     position: absolute;
     top: 45%;
     left: 30%;
+    font-family: 'Antic Slab';
+
 }
 
 #btn{
@@ -70,6 +74,8 @@ p {
     font-size: 15px;
     box-shadow:  0.1em 0.1em 0.1em;
     cursor: pointer;
+    font-family: 'Antic Slab';
+
 }
 
 #btnt {
@@ -87,6 +93,8 @@ p {
     font-size: 15px;
     box-shadow:  0.1em 0.1em 0.1em;
     cursor: pointer;
+    font-family: 'Antic Slab';
+
 }
 
 #btnr {
@@ -104,4 +112,6 @@ p {
     font-size: 15px;
     box-shadow:  0.1em 0.1em 0.1em;
     cursor: pointer;
+    font-family: 'Antic Slab';
+
 }
