--- a/style-tela-de-cadastro.css
+++ b/style-tela-de-cadastro.css
@@ -86,6 +86,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 
 }
 
@@ -102,6 +104,8 @@ body {
     left: 582px;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Idade {
@@ -117,6 +121,8 @@ body {
     left: 47%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Data-de-nascimento {
@@ -132,7 +138,8 @@ body {
     left: 65%;
     transform: translate(-50%, -50%);
     font-size: 20px;
-    
+    font-family: 'Antic Slab';
+
 }
 
 .bloco-CPF {
@@ -142,6 +149,8 @@ body {
     left: 675px;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #CPF {
@@ -157,6 +166,8 @@ body {
     left: 60%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Email {
@@ -172,6 +183,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Endereço {
@@ -187,6 +200,8 @@ body {
     left: 36.2%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Bairro {
@@ -202,6 +217,8 @@ body {
     left: 62.2%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #CEP {
@@ -217,6 +234,8 @@ body {
     left: 37.2%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Celular {
@@ -232,6 +251,8 @@ body {
     left: 62.2%;
     transform: translate(-50%, -50%);
     font-size: 24px;
+    font-family: 'Antic Slab';
+
 }
 
 #Telefone {
@@ -255,6 +276,8 @@ body {
     font-size: 15px;
     box-shadow:  0.1em 0.1em 0.1em;
     cursor: pointer;
+    font-family: 'Antic Slab';
+
 
 }
 
