--- a/style-Seja-bem-vindo.css
+++ b/style-Seja-bem-vindo.css
@@ -13,11 +13,36 @@ a {
     color: inherit;
 }
 
-body {
+:root {
+  --black:#000000;
+  --white:#ffffff;
+  --light-grayish-orange:#E3D4C2;
+  --grayish-orange:#D3BB9F;
+  --slightly-desaturated-orange--light:#C8AA86;
+  --slightly-desaturated-orange--dark:#B89163;
+  --dark-moderate-orange--yellow-tone:#9F7748;
+  --dark-moderate-orange-black-tone:#7D5E39;
+  --very-dark-orange--brown-tone:#572F00;   
+  /* use "var()" nos lugares de cores e automaticamente vai puxar para escolher as cores de cima */
+}
 
-    background-image: url(img/Fundo-paciente.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+body {
+    
+   }
+
+.fundo {
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  filter: blur(2px);
+  top: 0;
+  left: 0;
+  background-color: red;
+  background-image: url(img/Fundo-paciente.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .quadrado {
@@ -25,49 +50,65 @@ body {
     width: 80ch;
     height: 120ex;
     background-color: white;
+    padding: 2%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 30px;
-    box-shadow: 0.5em 0.5em 0.5em  ;
-    
+    box-shadow:  1px 1px 15px 15px   #d3bb9fa1 ;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    z-index: 50;
   }
 
   h1 {
 
-    position: absolute;
-    top: 10%;
-    left: 32%;
+    position: relative;
+    margin-top: -10%;
+    /* top: 10%;
+    left: 32%; */
     font-size: 6ex;
     display: flex;
     text-align: center;
     font-family: 'Antic Slab';
 
-
+flex-direction: column;
   }
 
   .quadrado img {
 
     width: 50ch;
     height: 25ex;
-    position: absolute;
-    top: 30%;
-    left: 17%;
+    position: relative;
+    margin-bottom: 5%;
+    /* top: 30%;
+    left: 17%; */
   }
 
   #btn  {
 
-    width: 25ch;
-    height: 7ex;
+    border: none;
+    box-shadow: 0.3em 0.3em rgba(128, 128, 128, 0.384);
+    width: 30ch;
+    height: 8ex;
     background-color: #c8aa86bb;
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    /* top: 65%;
+    left: 50%; */
+    /* transform: translate(-50%, -50%); */
     border-radius: 50px;
-    font-size: 110%;
+    /* font-size: 110%; */
     cursor: pointer;
     font-family: 'Antic Slab';
 
+  }
+
+
+  #btn p {
+
+    
+    font-size: 2em;
   }
