--- a/style-tela-de-login.css
+++ b/style-tela-de-login.css
@@ -15,10 +15,22 @@ a {
 
 body {
 
-    background-image: url(img/pexels-fr3nks-305566.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-   
+  
+}
+
+.imgfundo {
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  filter: blur(2px);
+  top: 0;
+  left: 0;
+  background-color: red;
+  background-image: url(img/pexels-fr3nks-305566.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .quadrado {
@@ -31,8 +43,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 30px;
-    box-shadow: 0.5em 0.5em 0.5em;
-    
+    box-shadow:  1px 1px 15px 15px   #d3bb9fa1 ;
+    z-index: 1;
   }
 
   h1 {
@@ -69,16 +81,23 @@ body {
 
   #btn  {
 
-    width: 200px;
-    height: 50px;
+    width: 30ch;
+    height: 8ex;
     background-color: #c8aa86bb;
     position: absolute;
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50px;
-    font-size: 110%;
     cursor: pointer;
+    border: none;
+    box-shadow: 0.3em 0.3em rgba(128, 128, 128, 0.384);
+  }
+
+  #btn p {
+
+    
+    font-size: 2em;
   }
 
   .Recuperacao-de-senha {
