--- a/style-cadastro-bem-sucedido.css
+++ b/style-cadastro-bem-sucedido.css
@@ -18,6 +18,19 @@ body {
     background-color: #E3D4C2;
 }
 
+:root {
+    --black:#000000;
+    --white:#ffffff;
+    --light-grayish-orange:#E3D4C2;
+    --grayish-orange:#D3BB9F;
+    --slightly-desaturated-orange--light:#C8AA86;
+    --slightly-desaturated-orange--dark:#B89163;
+    --dark-moderate-orange--yellow-tone:#9F7748;
+    --dark-moderate-orange-black-tone:#7D5E39;
+    --very-dark-orange--brown-tone:#572F00;   
+    /* use "var()" nos lugares de cores e automaticamente vai puxar para escolher as cores de cima */
+  }
+
 .quadrado {
 
     width: 750px;
@@ -75,4 +88,10 @@ p {
     cursor: pointer;
     font-family: 'Antic Slab';
 
+}
+
+#btn:hover {
+
+background-color: #9F7748;
+color: white;
 }
